# SistemiOperativi2024

./: .gitignore  AUTHORS.md  CMakeLists.txt  README.md  config_machine.json  config_machine_phase3.json  pcb.c  test.sh
headers/: const.h  listx.h  types.h
phase1/: asl.c  pcb.c
phase1/headers/: asl.h  pcb.h
phase2/: exceptions.c  initial.c  interrupts.c  p2test.c  scheduler.c
phase2/headers/: exceptions.h  initial.h  interrupts.h  scheduler.h
phase3/headers/: initProc.h  sysSupport.h  vmSupport.h
testers/: Makefile  fibEight.c  fibEleven.c  print.c  printerTest.c  strConcat.c  terminalReader.c  terminalTest2.c  terminalTest3.c  terminalTest4.c  terminalTest5.c
